[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acstore"
version = "20251125"
description = "Attribute Container Storage (ACStore)"
maintainers = [
    { name = "Log2Timeline maintainers", email = "log2timeline-maintainers@googlegroups.com" },
]
license = "Apache-2.0"
license-files = ["ACKNOWLEDGEMENTS", "AUTHORS", "LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML >= 3.10",
]

[project.urls]
Documentation = "https://acstore.readthedocs.io/en/latest"
Homepage = "https://github.com/log2timeline/acstore"
Repository = "https://github.com/log2timeline/acstore"

[tool.setuptools.packages.find]
where = ["."]
include = ["acstore"]
exclude = ["docs", "tests", "tests.*", "utils"]
