[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acstore"
version = "20260704"
description = "Attribute Container Storage (ACStore)"
maintainers = [
    { name = "Log2Timeline maintainers", email = "log2timeline-maintainers@googlegroups.com" },
]
license = "Apache-2.0"
license-files = ["ACKNOWLEDGEMENTS", "AUTHORS", "LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML >= 3.10",
]

[project.urls]
Documentation = "https://acstore.readthedocs.io/en/latest"
Homepage = "https://github.com/log2timeline/acstore"
Repository = "https://github.com/log2timeline/acstore"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"

[tool.docformatter]
black = true
non-cap = []
non-strict = true

[tool.l2tdevtools]
name = "ACStore"
status = "alpha"
description = """
ACStore, or Attribute Container Storage, provides a stand-alone implementation \
to read and write attribute container storage files. \
"""

[tool.setuptools]
package-dir = {"acstore" = "acstore"}
