[metadata]
name = acstore
version = 20240210
description = Attribute Container Storage (ACStore).
long_description = ACStore, or Attribute Container Storage, provides a stand-alone implementation to read and write attribute container storage files.
long_description_content_type = text/plain
url = https://github.com/log2timeline/acstore
maintainer = Log2Timeline maintainers
maintainer_email = log2timeline-maintainers@googlegroups.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  acstore = acstore
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_rpm]
release = 1
packager = Log2Timeline maintainers <log2timeline-maintainers@googlegroups.com>
doc_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
build_requires = python3-setuptools
requires =
  python3-pyyaml >= 3.10

[bdist_wheel]
universal = 1
