[metadata]
name = acstore
version = 20251120
description = Attribute Container Storage (ACStore).
long_description = ACStore, or Attribute Container Storage, provides a stand-alone implementation to read and write attribute container storage files.
long_description_content_type = text/plain
url = https://github.com/log2timeline/acstore
maintainer = Log2Timeline maintainers
maintainer_email = log2timeline-maintainers@googlegroups.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  acstore = acstore
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .
